<resources>
    <string name="app_name">FoodShare-BoilerMake2018</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">login</string>
    <string name="displayLogo">displayLogo</string>
    <string name="createAccount">create account</string>
    <string name="menuLogout">log out</string>
    <string name="viewProfile">Profile</string>
    <string name="registrationIntro"> REGISTRATION</string>
    <string name="emailAddress">Email Address</string>
    <string name="password1">Password</string>
    <string name="city">City</string>
    <string name="addevent">Add Event</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="signUp">SIGN UP</string>
    <string name="restaurant">RESTAURANT</string>
    <string name="customer">CUSTOMER</string>
    <string name="address">Address</string>
    <string name="nameRestaurant">Name of Restaurant</string>
    <string name="seatingCapacity">Seating Capacity</string>
    <string name="dishName">Name of the Dish</string>
    <string name="dishPrice">Price of the Dish</string>
    <string name="addMore">ADD MORE</string>
    <string name="done">DONE</string>

</resources>
